Add Arduino serial code
This library, developed by Tod E. Kurt (http://todbot.com/blog/) will be
used to interface with an Arduino enabled vehicle.

--- a/vehicle_interface/CMakeLists.txt
+++ b/vehicle_interface/CMakeLists.txt
@@ -82,9 +82,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+  INCLUDE_DIRS include
 #  LIBRARIES vehicle_interface
-#  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp sensor_msgs std_msgs
+  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp sensor_msgs std_msgs
 #  DEPENDS system_lib
 )
 
@@ -94,7 +94,7 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-# include_directories(include)
+include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
@@ -105,16 +105,16 @@ include_directories(
 # )
 
 ## Declare a cpp executable
-# add_executable(vehicle_interface_node src/vehicle_interface_node.cpp)
+add_executable(interface src/interface.cpp src/arduino_serial.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 # add_dependencies(vehicle_interface_node vehicle_interface_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(vehicle_interface_node
-#   ${catkin_LIBRARIES}
-# )
+ target_link_libraries(interface
+   ${catkin_LIBRARIES}
+ )
 
 #############
 ## Install ##
