--- a/vehicle_perception/CMakeLists.txt
+++ b/vehicle_perception/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(vehicle_perception)
 
+
+find_package(OpenCV REQUIRED)
+
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
@@ -10,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   nav_msgs
   roscpp
   sensor_msgs
+  image_transport
 )
 
 ## System dependencies are found with CMake's conventions
@@ -84,8 +88,8 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES vehicle_perception
-#  CATKIN_DEPENDS cv_bridge geometry_msgs nav_msgs roscpp sensor_msgs
-#  DEPENDS system_lib
+  CATKIN_DEPENDS cv_bridge geometry_msgs nav_msgs roscpp sensor_msgs image_transport
+  DEPENDS OpenCV
 )
 
 ###########
@@ -105,16 +109,16 @@ include_directories(
 # )
 
 ## Declare a cpp executable
-# add_executable(vehicle_perception_node src/vehicle_perception_node.cpp)
+add_executable(blob_perception src/blob_perception.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 # add_dependencies(vehicle_perception_node vehicle_perception_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(vehicle_perception_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(blob_perception
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
