--- a/vehicle_perception/package.xml
+++ b/vehicle_perception/package.xml
@@ -45,11 +45,14 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>image_transport</build_depend> 
+  
   <run_depend>cv_bridge</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>image_transport</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
