--- a/vehicle_perception/package.xml
+++ b/vehicle_perception/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>vehicle_perception</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   
   <description>The vehicle_perception package</description>
   <maintainer email="dfornas@uji.es">David Fornas</maintainer>
@@ -17,6 +17,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>image_transport</build_depend> 
+  <build_depend>std_srvs</build_depend>
   
   <run_depend>cv_bridge</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -24,6 +25,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>image_transport</run_depend>
+  <run_depend>std_srvs</run_depend>
 
   <export>
 
