--- a/vehicle_perception/package.xml
+++ b/vehicle_perception/package.xml
@@ -18,6 +18,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>image_transport</build_depend> 
   <build_depend>std_srvs</build_depend>
+  <build_depend>tf</build_depend>
   
   <run_depend>cv_bridge</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -26,9 +27,9 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>std_srvs</run_depend>
+  <run_depend>tf</run_depend>
 
   <export>
 
   </export>
-
 </package>
